Sun Jan 31 18:39:09 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* nfs.c (xdr_encode_sattr_times): Convert nanoseconds to
	microseconds correctly.

	* ops.c (netfs_attempt_utimes): Handle new possibility that ATIME
	or MTIME might be null.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* ops.c (netfs_attempt_link): Remove major, minor macro definitions.
	* nfs.c (xdr_decode_fattr): Remove makedev macro definition.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* mount.c (mount_root): Make perror explanation strings consistent.

	* mount.c (pmap_initialize_rpc): Make static.
	(mount_initialize_rpc): Likewise.

Wed Aug 20 14:31:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_link): Implement EXCL == 0 case.
	(netfs_attempt_rename): Implement EXCL != 0 case.

	* pager.c (netfs_get_filemap): If pager_create fails, return
	error to caller.

Wed Aug  6 15:23:03 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ops.c (netfs_attempt_unlink): Purge cache-held references
 	*before* counting live references.  Use new function.
	* name-cache.c (purge_lookup_cache_node): New function.
	* nfs.h (purge_lookup_cache_node): New decl.

	* cache.c (netfs_node_norefs): Don't do delete RPC here, fork off
	a separate thread to do it.
	(struct fnd): New type.
	(forked_node_delete): New function.

Mon Aug  4 15:56:37 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* name-cache.c (struct lookup_cache): Drop members `node_cache_fh'
	and `node_cache_len'.  New member `np'.
	(enter_lookup_cache): Fill C->np instead of C->node_cache_fh.
	Acquire an additional reference on NP to keep it live.  If there
	was a reference there before, release it.
	(purge_lookup_cache): If there is a reference to a node on a
	purged entry, release it.
	(check_lookup_cache): If there is a reference to a node on an
	out-of-date entry, release it.  When returning live positive hits,
	use the NP stored instead of looking one up.
